tests/syntax/good/testfile-constants-1.rs


const T : usize = 3;

const A : i32 = 5;


fn main() {
    if T + A == 8 {
        print!("yes\n")
    } else {
        print!("oops\n")
    }
}